Fix static mapframes not showing as block
Bug: T149831

--- a/styles/kartographer.less
+++ b/styles/kartographer.less
@@ -65,6 +65,9 @@ a.mw-kartographer-autostyled:visited {
 	background-repeat: no-repeat;
 	background-size: contain;
 	display: block;
+	&.mw-kartographer-link {
+		display: block;
+	}
 
 	&.leaflet-container {
 		background-size: contain;
